--- a/package.json
+++ b/package.json
@@ -10,24 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
+    "@firebase/auth": "^1.10.0",
+    "@firebase/firestore": "^4.7.10",
+    "@firebase/storage": "^0.13.7",
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@stripe/stripe-js": "^7.0.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.72.2",
+    "@tanstack/react-query-devtools": "^5.72.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
+    "firebase": "^11.6.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
+    "react-qr-code": "^2.0.15",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.22.2",
-    "sonner": "^1.4.3",
-    "tailwind-merge": "^2.2.1",
-    "zod": "^3.22.4",
-    "@tailwindcss/forms": "^0.5.7"
+    "recharts": "^2.15.2",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^2.6.0",
+    "web3": "^4.16.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
